--- a/156-preced-exec/index.html
+++ b/156-preced-exec/index.html
@@ -4,12 +4,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript</title>
+    <title>JavaScript - Precedência de Execução</title>
 
 </head>
 <body>
 
     <h1>Curso de Javascript</h1>
-    
+    <input type="text" placeholder="Teste de precedência" id="nome" disabled="disabled">
+
+    <script src="meu_script.js"></script>
+
 </body>
 </html>
