--- a/175-switch-pratica/index.html
+++ b/175-switch-pratica/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript - Switch na teoria</title>
+    <title>JavaScript - Switch na prática</title>
 
     <script src="meu_script.js"></script>
 
