25JUL24 - Aula 190 - Praticando mais com DATAS

--- a/190 - datas/index.html
+++ b/190 - datas/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript - Trabalhando mais com datas</title>
+    <title>JavaScript - Funções Nativas para manipular datas</title>
 
     <script src="meu_script.js"></script>
 
