28JUL24 - Aula 202 - Atividade (Alteração style de elementos - DOM)

--- a/200-dom-man-style/index.html
+++ b/200-dom-man-style/index.html
@@ -4,10 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-
-    <title>JavaScript - DOM (Document Object Model) - Manipulando classes de elementos</title>
+    <title>JavaScript - DOM (Document Object Model) - Manipulando estilos de elementos</title>
 
     <script src="meu_script.js"></script>
 
@@ -15,14 +12,17 @@
 
 <body>
 
-    <div id="mensagem" class="estilo1">
-        Modificando a classe do elemento
-    </div>
+    <h3>Manipulando estilo</h3>
+
+    <button type="button" onclick="modificaEstilo('#FF0000', '300px')">Vermelho</button>
+
+    <button type="button" onclick="modificaEstilo('#00FF00', '150px', '20px')">Verde</button>
+
+    <button type="button" onclick="modificaEstilo('#0000FF', '150px', '200px')">Azul</button>
 
     <hr>
 
-    <button type="button" onclick="modifica_classe()">Aplicar classe</button>
-
+    <div style="border: 1px solid black; width: 100px; height: 100px;" id="quadrado"></div>
 
 </body>
 </html>
