--- a/202/index copy.html
+++ b/202/index copy.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
-    <title>JavaScript - DOM (Document Object Model) - Manipulando classes de elementos</title>
+    <title>JavaScript - Atividades</title>
 
     <script src="meu_script.js"></script>
 
@@ -15,14 +15,11 @@
 
 <body>
 
-    <div id="mensagem" class="estilo1">
-        Modificando a classe do elemento
-    </div>
-
-    <hr>
-
-    <button type="button" onclick="modifica_classe()">Aplicar classe</button>
-
+    <input
+    id="campo"
+    type="text"
+    onfocus="acionaCampo()"
+    onblur="validaCampo()" />
 
 </body>
 </html>
