01AGO24 - Aula 226 - (Screen)

--- a/225-bom-window/index.html
+++ b/225-bom-window/index.html
@@ -19,23 +19,30 @@
 
   <body>
 
-    <button
-    class="btn btn-lg btn-dark"
-    onclick="abrirPopUp()">
-      Abrir PopUp
-    </button>
 
-    <button
-    class="btn btn-lg btn-dark"
-    onclick="fecharPopUp()">
-      Fechar PopUp
-    </button>
+    <div class="container">
+      <div class="row">
 
-    <button
-    class="btn btn-lg btn-dark"
-    onclick="window.print()">
-      Imprimir Página
-    </button>
+        <button
+        class="btn btn-lg btn-dark m-2"
+        onclick="abrirPopUp()">
+          Abrir PopUp
+        </button>
+
+        <button
+        class="btn btn-lg btn-dark m-2"
+        onclick="fecharPopUp()">
+          Fechar PopUp
+        </button>
+
+        <button
+        class="btn btn-lg btn-dark m-2"
+        onclick="window.print()">
+          Imprimir Página
+        </button>
+
+      </div>
+    </div>
 
 
 
